Fixed footer alignment issues and added linear gradient to main page.

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -97,8 +97,8 @@ nav ul li a:hover {
 }
 .foot p{
   margin-bottom: 0px;
+  padding-bottom: 10px;
 }
-
 .ficons {
 
   margin: 20px 15px 5px 0px;
