--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #e4f1ad;
+    background-image: linear-gradient(90deg, #dbc464, #68f6bc);
   margin: 4% 2% 0% 2%;
 }
 h1{
@@ -13,13 +13,8 @@ h1{
   margin: auto;
 }
 img{
-<<<<<<< HEAD
   width: 100%;
   height: 500px;
-=======
-  height: 500px;
-  width: 100%;
->>>>>>> f2c8782aee7c380b633229559cdbc14ee53318d5
   box-shadow: 0 4px 8px 0 rgba(0, 122, 0, 0.8), 0 6px 20px 0 rgba(0, 0, 0, 0.50);
 }
 .form-group{
